# kbase_search

./: .gitignore  pyproject.toml
kendra/cloudformation/: README.md  data_source.yml  index.yml  roles.yml  roles_data_source.yml  roles_indexing.yml  s3_source.yml
kendra/notebooks/: 20210418_load_s3.ipynb
notebooks/: basic_haystack_qa.ipynb
